Fix: harden Patchwork startup publication